<resources>
    <string name="app_name">Resolve Essa</string>

    <string name="txt_fone">Telefone *</string>
    <string name="txt_name">Nome *</string>
    <string name="txt_password">Senha *</string>
    <string name="txt_email">Email</string>
    <string name="btn_sign">Entrar</string>
    <string name="btn_signup">Cadastre-se</string>
    <string name="login_authorized">Bem vindo</string>
    <string name="login_unauthorized">Usuário ou senha inválidos</string>
    <string name="title_signup">Cadastre-se</string>
    <string name="btn_register">Cadastrar</string>
    <string name="msg_register_success">Cadastro efetuado com sucesso.</string>

    <string name="api_fail">Ops! Estamos com problemas, tente novamente mais tarde.</string>
</resources>
