<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".user.signin.SigninActivity">

    <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp" android:layout_marginEnd="32dp" android:layout_marginRight="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/textInputLayout2">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_fone" android:id="@+id/txtName"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp" android:id="@+id/textInputLayout3">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_password" android:id="@+id/txtPassword"
                android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>
    <Button
            android:text="@string/btn_sign"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnSigin" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp" android:layout_marginRight="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp" android:background="@color/colorPrimary"
            android:textColor="@android:color/white"/>
    <TextView
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtvTitle"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="176dp" android:layout_marginRight="176dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="176dp"
            android:layout_marginStart="176dp" android:textSize="30sp" android:textStyle="bold"
            android:textColor="@color/design_default_color_primary" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout2"/>
    <Button
            android:text="@string/btn_signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnSigup" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btnSigin" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp" android:layout_marginRight="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp" android:background="@color/design_default_color_primary"
            android:textColor="@android:color/white"/>
</android.support.constraint.ConstraintLayout>